# somo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.nix  test.sh
.github/: version_check.py
.github/workflows/: build.yml  ci.yml  cicd.yml  release.yml  rust.yml
integration_tests/: integration_tests.rs  test.sh
integration_tests/setup/: mock_processes.sh
nix/: flake.nix  package.nix
src/: address_checkers.rs  cli.rs  config.rs  connections.rs  interface.rs  macros.rs  main.rs  markdown.rs  processes.rs  schemas.rs  services.rs  string_utils.rs  table.rs  utils.rs  view.rs
src/connections/: common.rs  linux.rs  macos.rs  mod.rs
tests/: generate_mock_procfs.sh  integration_tests.rs  integration_tests.sh
tests/mock/proc/11/: cmdline  stat
tests/mock/proc/11/fd/: 3
tests/mock/proc/13/: cmdline  stat
tests/mock/proc/13/fd/: 3
tests/mock/proc/15/: cmdline  exe  stat
tests/mock/proc/15/fd/: 3
tests/mock/proc/17/: cmdline  stat
tests/mock/proc/17/fd/: 3
tests/mock/proc/19/: cmdline  stat
tests/mock/proc/19/fd/: 3
tests/mock/proc/21/: cmdline  stat
tests/mock/proc/21/fd/: 3
tests/mock/proc/22/: cmdline  stat
tests/mock/proc/22/fd/: 3
tests/mock/proc/9/: cmdline  stat
tests/mock/proc/9/fd/: 3
tests/mock/proc/net/: tcp  tcp6  udp  udp6
tests/mock_procfs/: Dockerfile  mock_processes.sh
tests/mock_procfs/net/: tcp  tcp6  udp  udp6
tests/setup/: Dockerfile  generate_mock_procfs.sh  init_processes.sh
