[package]
name = "somo"
version = "1.2.0"
edition = "2021"
authors = ["theopfr"]
description = "A human-friendly alternative to netstat for socket and port monitoring on Linux and macOS."
license = "MIT"
readme = "./README.md"
repository = "https://github.com/theopfr/somo/"
keywords = ["netstat", "socket-monitoring", "port-checker"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.58"
inquire = "0.9.1"
termimad = "0.34.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
handlebars = "6.3.2"
nix = {version = "0.30.1", features = ["process", "signal"]}
etcetera = "0.10.0"
libc = "0.2.176"

[dev-dependencies]
tempfile = "3.23.0"
regex = "1.11.3"
assert_cmd = "2.0.17"
predicates = "3.1.3"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18.0"

[target.'cfg(target_os = "macos")'.dependencies]
netstat2 = "0.11.2"
libproc = "0.14.10"
